# reversible-inductive-construction

./: .gitignore  LICENSE  README.md
code/: .clang-format  CMakeLists.txt  README.md  pytest.ini  setup.cfg  setup.py
code/cpp/: module.cpp  module.h  molecule_edit.cpp  molecule_representation.cpp
code/cpp/torch/: CMakeLists.txt  module.cpp  repeat_interleave.cpp  repeat_interleave.h  repeat_interleave_cuda.cu  segment_pool.cpp
code/cpp/wrap/: atom.cpp  bond.cpp  mol.cpp  molops.cpp  utilities.cpp  wrappers.h
code/genric/: Chem.py  chemutils.py  data_utils.py  molecule_edit.py  vocabulary.py
code/genric/corruption_dataset/: __main__.py  _cached_dataset.py  _laman_dataset.py  _path_dataset.py  _sample.py
code/genric/deploy/: _data.py  chain.py  embed_dataset.py
code/genric/laman/: _data.py  action.py  data_gen.py  decomp.py  joint_network.py  laman_edit.py  pebble.pyx  summary.py
code/genric/laman/representation/: __init__.py  _aggregation.py  _data.py  _representation.py
code/genric/model/: __init__.py  _autograd_range.py  message_passing.py  nn.py  readout.py
code/genric/molecule_models/: _distributed_utils.py  _train_harness.py  export_embeddings.py  joint_network.py  train_joint.py
code/genric/molecule_representation/: __init__.py  _aggregration.py  _representation.py
code/genric/torch_ext/: __init__.py  _repeat_interleave.py  segment_pool.py
code/induc_gen/: Chem.py  action.py  chemutils.py
code/induc_gen/corruption_dataset/: __init__.py  _dataset.py
code/induc_gen/laman/: _utils.py  decomp.py  deploy.py  graph.py  train_joint.py
code/induc_gen/laman/representation/: _action.py
code/induc_gen/model/: classification.py  summary.py
code/induc_gen/molecule_models/: _train_utils.py  action_representation.py  modules.py  summary.py
code/induc_gen/molecule_representation/: _implementation_python.py  _representation.py  _types.py
code/induc_gen/torch_ext/: _util.py  multi_logit.py  segment_ops.py
code/lib/: .gitignore  rdkit.patch
code/lib/pybind11/include/pybind11/detail/: class.h
code/tests/: test_action_representation.py  test_chem.py  test_laman_edit.py  test_laman_representation.py  test_molecule_edit.py  test_molecule_representation.py  test_molecule_representation_incidence.py  test_torch_extensions.py  test_torch_index.py  test_torch_multi_logit.py  test_torch_segment_indirect.py  test_torch_segment_pool.py  test_vocabulary.py
code/tests/data/: test_molecule_representation_data.pkl.bz2
code/tests/test_model/: test_summary.py
data/laman/: low_decomp_dataset_sample.pkl
